# EmbeddedIOOperations

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
include/: EmbeddedIOServiceCollection.h  Record.h
include/CommunicationHandlers/: CommunicationHandler_GetVariable.h
include/Operations/: EmbeddedIOOperationFactory.h  EmbeddedIOOperationFactoryRegister.h  Operation_AnalogPinRead.h  Operation_CANPackData.h  Operation_CANParseData.h  Operation_CANRead.h  Operation_CANReadData.h  Operation_CANWriteData.h  Operation_DigitalPinInterruptRecord.h  Operation_DigitalPinRead.h  Operation_DigitalPinRecord.h  Operation_DigitalPinWrite.h  Operation_DutyCyclePinRead.h  Operation_FIRFilter.h  Operation_FrequencyPinRead.h  Operation_GetTick.h  Operation_Interval.h  Operation_PulseWidthPinRead.h  Operation_PwmPinWrite.h  Operation_Record.h  Operation_SecondsToTicks.h  Operation_TicksToSeconds.h
src/CommunicationHandlers/: CommunicationHandler_GetVariable.cpp
src/Operations/: EmbeddedIOOperationFactory.cpp  EmbeddedIOOperationFactoryRegister.cpp  Operation_AnalogPinRead.cpp  Operation_CANPackData.cpp  Operation_CANParseData.cpp  Operation_CANRead.cpp  Operation_CANReadData.cpp  Operation_CANWriteData.cpp  Operation_DigitalPinInterruptRecord.cpp  Operation_DigitalPinRead.cpp  Operation_DigitalPinRecord.cpp  Operation_DigitalPinWrite.cpp  Operation_DutyCyclePinRead.cpp  Operation_FrequencyPinRead.cpp  Operation_GetTick.cpp  Operation_Interval.cpp  Operation_PulseWidthPinRead.cpp  Operation_PwmPinWrite.cpp  Operation_SecondsToTicks.cpp  Operation_TicksToSeconds.cpp
test/: CMakeLists.txt
test/src/: Operation_AnalogPinReadTests.cpp  Operation_CANPackDataTests.cpp  Operation_CANParseDataTests.cpp  Operation_CANReadDataTests.cpp  Operation_CANReadTests.cpp  Operation_CANWriteDataTests.cpp  Operation_DigitalPinInterruptRecordTests.cpp  Operation_DigitalPinReadTests.cpp  Operation_DigitalPinRecordTests.cpp  Operation_DigitalPinWriteTests.cpp  Operation_DutyCyclePinReadTests.cpp  Operation_FrequencyPinReadTests.cpp  Operation_GetTickTests.cpp  Operation_IntervalTests.cpp  Operation_PulseWidthPinReadTests.cpp  Operation_PwmPinWriteTests.cpp  Operation_RecordTests.cpp  Operation_SecondsToTicksTest.cpp  Operation_SecondsToTicksTests.cpp  Operation_TicksToSecondsTests.cpp
